added modal window with buttons

--- a/WebAPI/ClientApp/src/app/app.component.html
+++ b/WebAPI/ClientApp/src/app/app.component.html
@@ -1,3 +1,8 @@
-<h2>Hello World Relations Component!</h2>
+<div class="container">
+  <h3 class="d-flex justify-content-center">Angular 11, Web API, SQL Server App</h3>
+  <h5 class="d-flex justify-content-center">Relations editing</h5>
 
-<router-outlet></router-outlet>
+
+  <router-outlet></router-outlet>
+
+</div>
