--- a/WebAPI/ClientApp/src/app/relations/show-relation/show-relation.component.html
+++ b/WebAPI/ClientApp/src/app/relations/show-relation/show-relation.component.html
@@ -1,1 +1,62 @@
-<p>show-relation works!</p>
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary float-right m-2" data-toggle="modal" data-target="#exampleModal" (click)="addClick()"
+        data-backdrop="static" data-keyboard="false">
+  Add relation
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">{{ModalTitle}}</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"
+                (click)="closeClick()">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <app-add-edit-relation [relation]="relation" *ngIf="ActivateAddEditRelationsComponent"></app-add-edit-relation>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<table class="table table-stripped">
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th>FullName</th>
+      <th>TelephoneNumber</th>
+      <th>Email</th>
+      <th>Country</th>
+      <th>City</th>
+      <th>Street</th>
+      <th>PostalCode</th>
+      <th>StreetNumber</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let dataItem of RelationsList">
+      <td>{{dataItem.Name}}</td>
+      <td>{{dataItem.FullName}}</td>
+      <td>{{dataItem.TelephoneNumber}}</td>
+      <td>{{dataItem.Country}}</td>
+      <td>{{dataItem.City}}</td>
+      <td>{{dataItem.Street}}</td>
+      <td>{{dataItem.PostalCode}}</td>
+      <td>{{dataItem.StreetNumber}}</td>
+      <td>
+        <button type="button" class="btn btn-primary float-right m-2" data-toggle="modal" data-target="#exampleModal"
+                (click)="editClick(dataItem)"
+        data-backdrop="static" data-keyboard="false">
+          Edit
+        </button>
+        <button type="button" class="btn btn light mr-1">
+          Delete
+        </button>
+      </td>
+    </tr>
+  </tbody>
+</table>
