--- a/WebAPI/ClientApp/src/app/relations/show-relation/show-relation.component.html
+++ b/WebAPI/ClientApp/src/app/relations/show-relation/show-relation.component.html
@@ -16,7 +16,7 @@
         </button>
       </div>
       <div class="modal-body">
-        <app-add-edit-relation [relation]="relation" *ngIf="ActivateAddEditRelationsComponent"></app-add-edit-relation>
+        <add-edit-relation [relation]="relation" *ngIf="ActivateAddEditRelationsComponent"></add-edit-relation>
       </div>
     </div>
   </div>
@@ -53,7 +53,7 @@
         data-backdrop="static" data-keyboard="false">
           Edit
         </button>
-        <button type="button" class="btn btn light mr-1">
+        <button type="button" class="btn btn-primary float-right m-2">
           Delete
         </button>
       </td>
