--- a/WebAPI/ClientApp/src/app/relations/show-relation/show-relation.component.html
+++ b/WebAPI/ClientApp/src/app/relations/show-relation/show-relation.component.html
@@ -53,7 +53,9 @@
         data-backdrop="static" data-keyboard="false">
           Edit
         </button>
-        <button type="button" class="btn btn-primary float-right m-2">
+        <button type="button" class="btn btn-primary float-right m-2" data-toggle="modal" data-target="#exampleModal"
+                (click)="deleteClick(dataItem)"
+        data-backdrop="static" data-keyboard="false">
           Delete
         </button>
       </td>
