--- a/WebAPI/ClientApp/src/app/relations/show-relation/show-relation.component.html
+++ b/WebAPI/ClientApp/src/app/relations/show-relation/show-relation.component.html
@@ -6,7 +6,7 @@
 
 <!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
+  <div class="modal-dialog modal-dialog-centered modal-xl" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="exampleModalLabel">{{ModalTitle}}</h5>
@@ -16,7 +16,8 @@
         </button>
       </div>
       <div class="modal-body">
-        <add-edit-relation [relation]="relation" *ngIf="ActivateAddEditRelationsComponent"></add-edit-relation>
+        <app-add-edit-relation [relation]="relation" *ngIf="ActivateAddEditRelationsComponent">
+        </app-add-edit-relation>
       </div>
     </div>
   </div>
@@ -53,6 +54,8 @@
         data-backdrop="static" data-keyboard="false">
           Edit
         </button>
+      </td>
+      <td>
         <button type="button" class="btn btn-primary float-right m-2" data-toggle="modal" data-target="#exampleModal"
                 (click)="deleteClick(dataItem)"
         data-backdrop="static" data-keyboard="false">
