--- a/WebAPI/ClientApp/src/app/relations/add-edit-relation/add-edit-relation.component.html
+++ b/WebAPI/ClientApp/src/app/relations/add-edit-relation/add-edit-relation.component.html
@@ -1,8 +1,49 @@
 <div class="form-froup row">
-  <label class="col-sm-2 col-form-label">Relation name</label>
-  <div class="col-sm-10">
-    <input type="text" class="form-control" [(ngModel)]="RelationName" placeholder="Enter relation name" />
+  <label class="col-sm-2 col-form-label">Name</label>
+  <div class="col-sm-2">
+    <input type="text" class="form-control" [(ngModel)]="Name"  />
   </div>
+
+  <label class="col-sm-2 col-form-label">FullName</label>
+  <div class="col-sm-2">
+    <input type="text" class="form-control" [(ngModel)]="FullName"  />
+  </div>
+
+  <label class="col-sm-2 col-form-label">TelephoneNumber</label>
+  <div class="col-sm-2">
+    <input type="text" class="form-control" [(ngModel)]="TelephoneNumber"  />
+  </div>
+
+  <label class="col-sm-2 col-form-label">Email</label>
+  <div class="col-sm-2">
+    <input type="text" class="form-control" [(ngModel)]="Email"  />
+  </div>
+
+  <label class="col-sm-2 col-form-label">Country</label>
+  <div class="col-sm-2">
+    <input type="text" class="form-control" [(ngModel)]="Country"  />
+  </div>
+
+  <label class="col-sm-2 col-form-label">City</label>
+  <div class="col-sm-2">
+    <input type="text" class="form-control" [(ngModel)]="City"  />
+  </div>
+
+  <label class="col-sm-2 col-form-label">Street</label>
+  <div class="col-sm-2">
+    <input type="text" class="form-control" [(ngModel)]="Street"  />
+  </div>
+
+  <label class="col-sm-2 col-form-label">PostalCode</label>
+  <div class="col-sm-2">
+    <input type="text" class="form-control" [(ngModel)]="PostalCode"  />
+  </div>
+
+  <label class="col-sm-2 col-form-label">StreetNumber</label>
+  <div class="col-sm-2">
+    <input type="text" class="form-control" [(ngModel)]="StreetNumber"  />
+  </div>
+
 </div>
 
 <button (click)="addRelation()" *ngIf="relation.Id==0" class="btn btn-primary">Add new relation</button>
