--- a/WebAPI/ClientApp/src/app/relations/add-edit-relation/add-edit-relation.component.html
+++ b/WebAPI/ClientApp/src/app/relations/add-edit-relation/add-edit-relation.component.html
@@ -14,29 +14,29 @@
     <input type="text" class="form-control" [(ngModel)]="TelephoneNumber"  />
   </div>
 
-  <label class="col-sm-2 col-form-label">Email</label>
+  <label class="col-sm-2 col-form-label">EmailAddress</label>
   <div class="col-sm-2">
-    <input type="text" class="form-control" [(ngModel)]="Email"  />
+    <input type="text" class="form-control" [(ngModel)]="EMailAddress"  />
   </div>
 
   <label class="col-sm-2 col-form-label">Country</label>
   <div class="col-sm-2">
-    <input type="text" class="form-control" [(ngModel)]="Country"  />
+    <input type="text" class="form-control" [(ngModel)]="DefaultCountry"  />
   </div>
 
   <label class="col-sm-2 col-form-label">City</label>
   <div class="col-sm-2">
-    <input type="text" class="form-control" [(ngModel)]="City"  />
+    <input type="text" class="form-control" [(ngModel)]="DefaultCity"  />
   </div>
 
   <label class="col-sm-2 col-form-label">Street</label>
   <div class="col-sm-2">
-    <input type="text" class="form-control" [(ngModel)]="Street"  />
+    <input type="text" class="form-control" [(ngModel)]="DefaultStreet"  />
   </div>
 
   <label class="col-sm-2 col-form-label">PostalCode</label>
   <div class="col-sm-2">
-    <input type="text" class="form-control" [(ngModel)]="PostalCode"  />
+    <input type="text" class="form-control" [(ngModel)]="DefaultPostalCode"  />
   </div>
 
   <label class="col-sm-2 col-form-label">StreetNumber</label>
