--- a/WebAPI/ClientApp/src/app/relations/show-relation/show-relation.component.html
+++ b/WebAPI/ClientApp/src/app/relations/show-relation/show-relation.component.html
@@ -43,11 +43,12 @@
       <td>{{dataItem.Name}}</td>
       <td>{{dataItem.FullName}}</td>
       <td>{{dataItem.TelephoneNumber}}</td>
-      <td>{{dataItem.Country}}</td>
-      <td>{{dataItem.City}}</td>
-      <td>{{dataItem.Street}}</td>
-      <td>{{dataItem.PostalCode}}</td>
-      <td>{{dataItem.StreetNumber}}</td>
+      <td>{{dataItem.EmailAddress}}</td>
+      <td>{{dataItem.DefaultCountry}}</td>
+      <td>{{dataItem.DefaultCity}}</td>
+      <td>{{dataItem.DefaultStreet}}</td>
+      <td>{{dataItem.DefaultPostalCode}}</td>
+      <td>{{dataItem.DefaultStreetNumber}}</td>
       <td>
 
         <button type="button" class="btn btn-light mr-1" data-toggle="modal" data-target="#exampleModal"
