--- a/WebAPI/ClientApp/src/app/relations/show-relation/show-relation.component.html
+++ b/WebAPI/ClientApp/src/app/relations/show-relation/show-relation.component.html
@@ -48,7 +48,7 @@
       <td>{{dataItem.DefaultCity}}</td>
       <td>{{dataItem.DefaultStreet}}</td>
       <td>{{dataItem.DefaultPostalCode}}</td>
-      <td>{{dataItem.DefaultStreetNumber}}</td>
+      <td>{{dataItem.StreetNumber}}</td>
       <td>
 
         <button type="button" class="btn btn-light mr-1" data-toggle="modal" data-target="#exampleModal"
