Scaffolded new controller

--- a/WebAPI/ClientApp/src/app/relations/add-edit-relation/add-edit-relation.component.html
+++ b/WebAPI/ClientApp/src/app/relations/add-edit-relation/add-edit-relation.component.html
@@ -1,4 +1,9 @@
 <div class="form-froup row">
+  <label class="col-sm-2 col-form-label">Id</label>
+  <div class="col-sm-2">
+    <input type="text" class="form-control" [(ngModel)]="Id"  />
+  </div>
+
   <label class="col-sm-2 col-form-label">Name</label>
   <div class="col-sm-2">
     <input type="text" class="form-control" [(ngModel)]="Name"  />
