--- a/WebAPI/ClientApp/src/app/relations/show-relation/show-relation.component.html
+++ b/WebAPI/ClientApp/src/app/relations/show-relation/show-relation.component.html
@@ -61,7 +61,7 @@
         </button>
 
 
-        <button type="button" class="btn btn-light mr-1" data-toggle="modal" data-target="#exampleModal"
+        <button type="button" class="btn btn-light mr-1" data-target="#exampleModal"
         (click)="deleteClick(dataItem)"
         data-backdrop="static" data-keyboard="false">
         <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-trash" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
