GET and Post works ok

--- a/WebAPI/ClientApp/src/app/relations/add-edit-relation/add-edit-relation.component.html
+++ b/WebAPI/ClientApp/src/app/relations/add-edit-relation/add-edit-relation.component.html
@@ -26,22 +26,22 @@
 
   <label class="col-sm-2 col-form-label">Country</label>
   <div class="col-sm-2">
-    <input type="text" class="form-control" [(ngModel)]="DefaultCountry"  />
+    <input type="text" class="form-control" [(ngModel)]="Country"  />
   </div>
 
   <label class="col-sm-2 col-form-label">City</label>
   <div class="col-sm-2">
-    <input type="text" class="form-control" [(ngModel)]="DefaultCity"  />
+    <input type="text" class="form-control" [(ngModel)]="City"  />
   </div>
 
   <label class="col-sm-2 col-form-label">Street</label>
   <div class="col-sm-2">
-    <input type="text" class="form-control" [(ngModel)]="DefaultStreet"  />
+    <input type="text" class="form-control" [(ngModel)]="Street"  />
   </div>
 
   <label class="col-sm-2 col-form-label">PostalCode</label>
   <div class="col-sm-2">
-    <input type="text" class="form-control" [(ngModel)]="DefaultPostalCode"  />
+    <input type="text" class="form-control" [(ngModel)]="PostalCode"  />
   </div>
 
   <label class="col-sm-2 col-form-label">StreetNumber</label>
