--- a/WebAPI/ClientApp/src/app/relations/show-relation/show-relation.component.html
+++ b/WebAPI/ClientApp/src/app/relations/show-relation/show-relation.component.html
@@ -49,8 +49,8 @@
       <td>{{dataItem.Street}}</td>
       <td>{{dataItem.PostalCode}}</td>
       <td>{{dataItem.StreetNumber}}</td>
+      <td><input type="checkbox"/></td>
       <td>
-
         <button type="button" class="btn btn-light mr-1" data-toggle="modal" data-target="#exampleModal"
                 (click)="editClick(dataItem)"
         data-backdrop="static" data-keyboard="false">
@@ -59,8 +59,8 @@
           <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
         </svg>
         </button>
-
-
+      </td>
+      <td>
         <button type="button" class="btn btn-light mr-1" data-target="#exampleModal"
         (click)="deleteClick(dataItem)"
         data-backdrop="static" data-keyboard="false">
