--- a/WebAPI/ClientApp/src/app/relations/add-edit-relation/add-edit-relation.component.html
+++ b/WebAPI/ClientApp/src/app/relations/add-edit-relation/add-edit-relation.component.html
@@ -6,8 +6,19 @@
 
   <label class="col-sm-2 col-form-label">Name</label>
   <div class="col-sm-2">
-    <input type="text" aria-required="true" class="form-control" [(ngModel)]="Name"  />
+    <input type="text" aria-required="true" class="form-control" required minlength="3" [(ngModel)]="Name" #name="ngModel"/>
   </div>
+
+    <div *ngIf="name.invalid && (name.dirty || name.touched)"
+      class="alert alert-danger">
+      <div *ngIf="name.errors.required">
+        Name is required.
+      </div>
+      <div *ngIf="name.errors.minlength">
+        Name must be at least 3 characters long.
+      </div>
+  </div>
+
 
   <label class="col-sm-2 col-form-label">FullName</label>
   <div class="col-sm-2">
