UI sorting enabled

--- a/WebAPI/ClientApp/src/app/relations/show-relation/show-relation.component.html
+++ b/WebAPI/ClientApp/src/app/relations/show-relation/show-relation.component.html
@@ -31,14 +31,14 @@
 <table class="table table-stripped">
   <thead>
     <tr>
-      <th>Name</th>
-      <th>FullName</th>
-      <th>TelephoneNumber</th>
-      <th>Email</th>
-      <th>Country</th>
-      <th>City</th>
-      <th>Street</th>
-      <th>PostalCode</th>
+      <th><button type="button" class="btn btn-primary" (click)="sortClick('Name')">Name</button></th>
+      <th><button type="button" class="btn btn-primary" (click)="sortClick('FullName')">FullName</button></th>
+      <th><button class="btn btn-primary">TelephoneNumber</button></th>
+      <th><button class="btn btn-primary">Email</button></th>
+      <th><button class="btn btn-primary">Country</button></th>
+      <th><button class="btn btn-primary">City</button></th>
+      <th><button class="btn btn-primary">Street</button></th>
+      <th><button class="btn btn-primary">PostalCode</button></th>
       <th>StreetNumber</th>
     </tr>
   </thead>
