--- a/WebAPI/ClientApp/src/app/relations/show-relation/show-relation.component.html
+++ b/WebAPI/ClientApp/src/app/relations/show-relation/show-relation.component.html
@@ -33,12 +33,12 @@
     <tr>
       <th><button type="button" class="btn btn-primary" (click)="sortClick('Name')">Name</button></th>
       <th><button type="button" class="btn btn-primary" (click)="sortClick('FullName')">FullName</button></th>
-      <th><button class="btn btn-primary">TelephoneNumber</button></th>
-      <th><button class="btn btn-primary">Email</button></th>
-      <th><button class="btn btn-primary">Country</button></th>
-      <th><button class="btn btn-primary">City</button></th>
-      <th><button class="btn btn-primary">Street</button></th>
-      <th><button class="btn btn-primary">PostalCode</button></th>
+      <th><button class="btn btn-primary" (click)="sortClick('TelephoneNumber')">TelephoneNumber</button></th>
+      <th><button class="btn btn-primary" (click)="sortClick('EmailAddress')">Email</button></th>
+      <th><button class="btn btn-primary" (click)="sortClick('Country')">Country</button></th>
+      <th><button class="btn btn-primary" (click)="sortClick('City')">City</button></th>
+      <th><button class="btn btn-primary" (click)="sortClick('Street')">Street</button></th>
+      <th><button class="btn btn-primary" (click)="sortClick('PostalCode')">PostalCode</button></th>
       <th>StreetNumber</th>
     </tr>
   </thead>
