--- a/WebAPI/ClientApp/src/app/app.component.html
+++ b/WebAPI/ClientApp/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <h3 class="d-flex justify-content-center">Angular 11, Web API, SQL Server App</h3>
   <h5 class="d-flex justify-content-center">Relations editing</h5>
-
+  <div class="bg"></div>
 <router-outlet></router-outlet>
 
 </div>
