--- a/WebAPI/ClientApp/src/app/relations/show-relation/show-relation.component.html
+++ b/WebAPI/ClientApp/src/app/relations/show-relation/show-relation.component.html
@@ -74,5 +74,11 @@
 </table>
 </div>
 
-<!-- <div><img src="https://c.pxhere.com/images/94/4c/e8df4e75da76e5d18ec73ce3f1aa-1575607.jpg!d" alt="Img" style="justify-content: center;"></div> -->
-<img width="900" height="422" src="https://www.michalbialecki.com/wp-content/uploads/2020/04/ship-2924136_1920-900x422.jpg" class="attachment-sapor-featured-image size-sapor-featured-image wp-post-image" alt="" srcset="https://www.michalbialecki.com/wp-content/uploads/2020/04/ship-2924136_1920-900x422.jpg 900w, https://www.michalbialecki.com/wp-content/uploads/2020/04/ship-2924136_1920-300x141.jpg 300w, https://www.michalbialecki.com/wp-content/uploads/2020/04/ship-2924136_1920-1024x480.jpg 1024w, https://www.michalbialecki.com/wp-content/uploads/2020/04/ship-2924136_1920-768x360.jpg 768w, https://www.michalbialecki.com/wp-content/uploads/2020/04/ship-2924136_1920-1536x720.jpg 1536w, https://www.michalbialecki.com/wp-content/uploads/2020/04/ship-2924136_1920-260x122.jpg 260w, https://www.michalbialecki.com/wp-content/uploads/2020/04/ship-2924136_1920.jpg 1920w" sizes="(max-width: 900px) 100vw, 900px">
+<div style="display: inline-block;">
+  <button class="btn btn-light" style="margin-right: 1cm;" (click)="previousPageClick()">Previous page</button>
+  <button class="btn btn-light" style="margin-right: 1cm;" (click)="nextPageClick()">Next page</button>
+  <label>Page number</label>
+  <input type="number" min="1" value="1" style="max-width: 1cm; margin: 1cm;" >
+  <label>Elements on the page</label>
+  <input type="number" min="1" value="5" style="max-width: 1cm; margin-left: 1cm;">
+</div>
