--- a/AngularWebUI/ClientApp/src/app/relations/show-relation/show-relation.component.html
+++ b/AngularWebUI/ClientApp/src/app/relations/show-relation/show-relation.component.html
@@ -1,7 +1,3 @@
-<!-- https://www.c-sharpcorner.com/article/how-to-highlight-selected-row-in-ngfor-in-angular-9/ -->
-<!-- Row highlight and selection for multiple delete -->
-
-<!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered modal-xl" role="document">
     <div class="modal-content">
@@ -19,66 +15,66 @@
     </div>
   </div>
 </div>
-
-
-
 <div>
-<table class="table - table-striped">
-  <thead class="thead - thead-light">
-    <tr>
-      <th><button class="btn btn-light" (click)="sortClick('Name')">Name</button></th>
-      <th><button class="btn btn-light" (click)="sortClick('FullName')">FullName</button></th>
-      <th><button class="btn btn-light" (click)="sortClick('TelephoneNumber')">TelephoneNumber</button></th>
-      <th><button class="btn btn-light" (click)="sortClick('EmailAddress')">Email</button></th>
-      <th><button class="btn btn-light" (click)="sortClick('Country')">Country</button></th>
-      <th><button class="btn btn-light" (click)="sortClick('City')">City</button></th>
-      <th><button class="btn btn-light" (click)="sortClick('Street')">Street</button></th>
-      <th><button class="btn btn-light" (click)="sortClick('PostalCode')">PostalCode</button></th>
-      <th><button class="btn btn-light" disabled>StreetNumber</button></th>
-      <th><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" (click)="addClick()"
-        data-backdrop="static" data-keyboard="false">Add relation</button></th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let dataItem of RelationsList">
-      <td>{{dataItem.Name}}</td>
-      <td>{{dataItem.FullName}}</td>
-      <td>{{dataItem.TelephoneNumber}}</td>
-      <td>{{dataItem.EmailAddress}}</td>
-      <td>{{dataItem.Country}}</td>
-      <td>{{dataItem.City}}</td>
-      <td>{{dataItem.Street}}</td>
-      <td>{{dataItem.PostalCode}}</td>
-      <td>{{dataItem.StreetNumber}}</td>
-      <td><input type="checkbox"/>
-        <button type="button" class="btn btn-light mr-1" data-toggle="modal" data-target="#exampleModal"
-                (click)="editClick(dataItem)"
-        data-backdrop="static" data-keyboard="false">
-        <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-pencil-square" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-          <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456l-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
-          <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
-        </svg>
-        </button>
-
-        <button type="button" class="btn btn-light mr-1" data-target="#exampleModal"
-        (click)="deleteClick(dataItem)"
-        data-backdrop="static" data-keyboard="false">
-        <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-trash" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-          <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
-          <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4L4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
-        </svg>
-        </button>
-      </td>
-    </tr>
-  </tbody>
-</table>
+  <table class="table - table-striped">
+    <thead class="thead - thead-light">
+      <tr>
+        <th><button class="btn btn-light" (click)="sortClick('Name')">Name</button></th>
+        <th><button class="btn btn-light" (click)="sortClick('FullName')">FullName</button></th>
+        <th><button class="btn btn-light" (click)="sortClick('TelephoneNumber')">TelephoneNumber</button></th>
+        <th><button class="btn btn-light" (click)="sortClick('EmailAddress')">Email</button></th>
+        <th><button class="btn btn-light" (click)="sortClick('Country')">Country</button></th>
+        <th><button class="btn btn-light" (click)="sortClick('City')">City</button></th>
+        <th><button class="btn btn-light" (click)="sortClick('Street')">Street</button></th>
+        <th><button class="btn btn-light" (click)="sortClick('PostalCode')">PostalCode</button></th>
+        <th><button class="btn btn-light" disabled>StreetNumber</button></th>
+        <th>
+          <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" (click)="addClick()"
+                  data-backdrop="static" data-keyboard="false">
+            Add relation
+          </button>
+        </th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let dataItem of RelationsList">
+        <td>{{dataItem.Name}}</td>
+        <td>{{dataItem.FullName}}</td>
+        <td>{{dataItem.TelephoneNumber}}</td>
+        <td>{{dataItem.EmailAddress}}</td>
+        <td>{{dataItem.Country}}</td>
+        <td>{{dataItem.City}}</td>
+        <td>{{dataItem.Street}}</td>
+        <td>{{dataItem.PostalCode}}</td>
+        <td>{{dataItem.StreetNumber}}</td>
+        <td>
+          <input type="checkbox" />
+          <button type="button" class="btn btn-light mr-1" data-toggle="modal" data-target="#exampleModal"
+                  (click)="editClick(dataItem)"
+                  data-backdrop="static" data-keyboard="false">
+            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-pencil-square" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+              <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456l-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z" />
+              <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z" />
+            </svg>
+          </button>
+          <button type="button" class="btn btn-light mr-1" data-target="#exampleModal"
+                  (click)="deleteClick(dataItem)"
+                  data-backdrop="static" data-keyboard="false">
+            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-trash" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+              <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z" />
+              <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4L4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z" />
+            </svg>
+          </button>
+        </td>
+      </tr>
+    </tbody>
+  </table>
 </div>
-
 <div style="display: inline-block;">
   <button class="btn btn-light" style="margin-right: 1cm;" (click)="previousPageClick()">Previous page</button>
   <button class="btn btn-light" style="margin-right: 1cm;" (click)="nextPageClick()">Next page</button>
   <label>Page number</label>
-  <input type="number" min="1" value="1" style="max-width: 1cm; margin: 1cm;" >
+  <input type="number" min="1" value="1" style="max-width: 1cm; margin: 1cm;">
   <label>Elements on the page</label>
   <input type="number" min="1" value="5" style="max-width: 1cm; margin-left: 1cm;">
 </div>
