--- a/AngularWebUI/ClientApp/src/app/relations/add-edit-relation/add-edit-relation.component.html
+++ b/AngularWebUI/ClientApp/src/app/relations/add-edit-relation/add-edit-relation.component.html
@@ -1,4 +1,4 @@
-<div class="form-horizontal">
+<div class="form-inline">
   
   <div class="form-group">
     <label class="control-label col-sm-2" *ngIf="relation.Id!= null">Id</label>
@@ -8,10 +8,10 @@
   </div>
 
 <div class="form-group">
-  <label class="control-label col-sm-2"  for="name">Name</label>
+  <label class="control-label col-sm-2" for="name">Name</label>
   <div class="col-sm-2">
-    <input type="text" aria-required="true" class="form-control" id="name" required minlength="3" [(ngModel)]="Name"
-      #name="ngModel" />
+    <input type="text" aria-required="true" class="form-control" id="name" name="name" required minlength="3" [(ngModel)]="Name"
+      #name="ngModel" placeholder="Enter name"/>
     <div *ngIf="name.invalid && (name.dirty || name.touched)" class="alert alert-danger">
       <div *ngIf="name.errors.required">
         Name is required.
