--- a/AngularWebUI/ClientApp/src/app/relations/add-edit-relation/add-edit-relation.component.html
+++ b/AngularWebUI/ClientApp/src/app/relations/add-edit-relation/add-edit-relation.component.html
@@ -67,6 +67,6 @@
 
 </div>
 
-<button (click)="addRelation()" *ngIf="relation.Id == null" class="btn btn-primary">Add new relation</button>
+<button (click)="addRelation()" *ngIf="relation.Id == null" class="btn btn-primary" data-dismiss="modal">Add new relation</button>
 
-<button (click)="updateRelation()" *ngIf="relation.Id!= null" class="btn btn-primary">Update relation</button>
+<button (click)="updateRelation()" *ngIf="relation.Id!= null" class="btn btn-primary" data-dismiss="modal">Update relation</button>
