Added countries list controller and all required repos and services.

--- a/AngularWebUI/ClientApp/src/app/relations/add-edit-relation/add-edit-relation.component.html
+++ b/AngularWebUI/ClientApp/src/app/relations/add-edit-relation/add-edit-relation.component.html
@@ -1,45 +1,37 @@
-<div class="form-inline">
-  
-  <div class="form-group">
-    <label class="control-label col-sm-2" *ngIf="relation.Id!= null">Id</label>
-    <div class="col-sm-2" *ngIf="relation.Id!= null">
-      <input type="text" readonly class="form-control" [(ngModel)]="Id" />
-    </div>
-  </div>
+<form class="form-horizontal" [formGroup]="form" (ngSubmit)="onSubmit(form.value)>
 
+<div class="form-group" *ngIf="relation.Id!= null">
+  <label class="control-label col-sm-2" *ngIf="relation.Id!= null">Id</label>
+  <div class="col-sm-2" *ngIf="relation.Id!= null">
+    <input type="text" readonly class="form-control" [(ngModel)]="Id" />
+  </div>
+</div>
 <div class="form-group">
   <label class="control-label col-sm-2" for="name">Name</label>
   <div class="col-sm-2">
-    <input type="text" aria-required="true" class="form-control" id="name" name="name" required minlength="3" [(ngModel)]="Name"
-      #name="ngModel" placeholder="Enter name"/>
-    <div *ngIf="name.invalid && (name.dirty || name.touched)" class="alert alert-danger">
-      <div *ngIf="name.errors.required">
-        Name is required.
-      </div>
-      <div *ngIf="name.errors.minlength">
-        Name must be at least 3 characters long.
-      </div>
-    </div>
+    <input type="text" class="form-control" id="name" [(ngModel)]="Name"
+    formControlName="name" placeholder="First name *"/>
   </div>
 </div>
-
-
-
+<div class="form-group" >
   <label class="control-label col-sm-2">FullName</label>
   <div class="col-sm-2">
     <input type="text" class="form-control" [(ngModel)]="FullName" />
   </div>
-
+</div>
+<div class="form-group" >
   <label class="control-label col-sm-2">TelephoneNumber</label>
   <div class="col-sm-2">
-    <input type="tel" class="form-control" [(ngModel)]="TelephoneNumber" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" />
+    <input type="tel" class="form-control" [(ngModel)]="TelephoneNumber" />
   </div>
-
+</div>
+<div class="form-group" >
   <label class="control-label col-sm-2">EmailAddress</label>
   <div class="col-sm-2">
-    <input type="email" class="form-control" [(ngModel)]="EmailAddress" />
+    <input type="email" class="form-control" formControlName="email" id="email" [(ngModel)]="EmailAddress" />
   </div>
 
+  <!-- TODO: Add dropdown with contries -->
   <label class="control-label col-sm-2">Country</label>
   <div class="col-sm-2">
     <input type="text" class="form-control" [(ngModel)]="Country" />
@@ -67,6 +59,7 @@
 
 </div>
 
-<button (click)="addRelation()" *ngIf="relation.Id == null" class="btn btn-primary" data-dismiss="modal">Add new relation</button>
+<button type="submit" (click)="addRelation()" *ngIf="relation.Id == null" class="btn btn-primary" [disabled]="!form.valid" data-dismiss="modal">Add new relation</button>
 
-<button (click)="updateRelation()" *ngIf="relation.Id!= null" class="btn btn-primary" data-dismiss="modal">Update relation</button>
+<button type="submit" (click)="updateRelation()" *ngIf="relation.Id!= null" class="btn btn-primary" [disabled]="!form.valid" data-dismiss="modal">Update relation</button>
+</form>
