Added new UI validation

--- a/AngularWebUI/ClientApp/src/app/relations/add-edit-relation/add-edit-relation.component.html
+++ b/AngularWebUI/ClientApp/src/app/relations/add-edit-relation/add-edit-relation.component.html
@@ -1,4 +1,4 @@
-<form class="form-horizontal" [formGroup]="form" (ngSubmit)="onSubmit(form.value)>
+<form class="form-horizontal" [formGroup]="form" >
 
 <div class="form-group" *ngIf="relation.Id!= null">
   <label class="control-label col-sm-2" *ngIf="relation.Id!= null">Id</label>
