--- a/AngularWebUI/ClientApp/src/app/relations/add-edit-relation/add-edit-relation.component.html
+++ b/AngularWebUI/ClientApp/src/app/relations/add-edit-relation/add-edit-relation.component.html
@@ -1,4 +1,4 @@
-<form class="form-horizontal" [formGroup]="form" >
+<form class="form-horizontal" (ngSubmit)="onSubmit(form)" [formGroup]="form" >
 
 <div class="form-group">
   <label class="control-label col-sm-2" for="name">Name</label>
