Added countries selection to UI

--- a/AngularWebUI/ClientApp/src/app/pagination/pagination.component.html
+++ b/AngularWebUI/ClientApp/src/app/pagination/pagination.component.html
@@ -2,7 +2,7 @@
     <button class="btn btn-light" style="margin-right: 1cm;" (click)="previousPageClick()">Previous page</button>
     <button class="btn btn-light" style="margin-right: 1cm;" (click)="nextPageClick()">Next page</button>
     <label>Page number</label>
-    <input type="number" min="1" value="1" style="max-width: 1cm; margin: 1cm;" [(ngModel)]=PageNumber >
+    <input type="number" min="1" value="1" style="max-width: 1cm; margin: 1cm;" name="PageNumber" [(ngModel)]="PageNumber">
     <label>Elements on the page</label>
-    <input type="number" min="1" value="5" style="max-width: 1cm; margin-left: 1cm;" [(ngModel)]="PageSize" >
+    <input type="number" min="1" value="5" style="max-width: 1cm; margin-left: 1cm;" name ="PageSize" [(ngModel)]="PageSize" >
 </div>
