--- a/AngularWebUI/ClientApp/src/app/relations/show-relation/show-relation.component.html
+++ b/AngularWebUI/ClientApp/src/app/relations/show-relation/show-relation.component.html
@@ -37,7 +37,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let dataItem of RelationsList">
+      <tr *ngFor="let dataItem of RelationsList; let i = index" (click)="setClickedRow(i)" [class.active]="i == selectedRow">
         <td>{{dataItem.Name}}</td>
         <td>{{dataItem.FullName}}</td>
         <td>{{dataItem.TelephoneNumber}}</td>
