--- a/AngularWebUI/ClientApp/src/app/relations/add-edit-relation/add-edit-relation.component.html
+++ b/AngularWebUI/ClientApp/src/app/relations/add-edit-relation/add-edit-relation.component.html
@@ -1,4 +1,4 @@
-<form class="form-horizontal" (ngSubmit)="onSubmit(form)" [formGroup]="form">
+<form class="form-horizontal" [formGroup]="form">
 
   <div class="form-group row">
     <label class="mr-sm-2 mb-0 sr-only">Name *</label>
