--- a/AngularWebUI/ClientApp/src/app/relations/show-relation/show-relation.component.html
+++ b/AngularWebUI/ClientApp/src/app/relations/show-relation/show-relation.component.html
@@ -1,5 +1,5 @@
 <div class="modal fade" id="formModal" tabindex="-1" role="dialog" aria-labelledby="formModal" aria-hidden="true" #formModal>
-  <div class="modal-dialog modal-dialog-centered modal-md" role="document">
+  <div class="modal-dialog modal-dialog-centered modal-xl" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="formModal">{{ModalTitle}}</h5>
@@ -9,7 +9,7 @@
         </button>
       </div>
       <div class="modal-body">
-        <app-add-edit-relation [(relation)]="relation" *ngIf="ActivateAddEditRelationsComponent"  (changesEvent)="reactOnModalEvent($event)">
+        <app-add-edit-relation [(relation)]="relation" *ngIf="ActivateAddEditRelationsComponent">
         </app-add-edit-relation>
       </div>
     </div>
